--- a/src/pages/Photo/photo.scss
+++ b/src/pages/Photo/photo.scss
@@ -4,9 +4,10 @@
     margin-bottom: 16px;
   }
   .pics {
+    text-align: center;
     img {
-      width: 100%;
-      margin-bottom: 16px;
+      width: 25%;
+      margin: 8px;
       animation: fadeIn 1s ease-in;
     }
   }
