--- a/src/pages/Message/message.scss
+++ b/src/pages/Message/message.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   height: calc(100vh - 60px);
+  justify-content: center;
   .messages {
     flex: 1;
     padding: 16px;
