--- a/src/pages/Message/message.scss
+++ b/src/pages/Message/message.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   height: calc(100vh - 60px);
   justify-content: center;
+  align-items: center;
   .messages {
     flex: 1;
     padding: 16px;
